// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<div
  tabindex="-1"
  aria-labelledby="«r0»"
>
  <h2 id="«r0»">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Fødselsdato kan ikke være etter år 2005
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        E-post må være gyldig
      </a>
    </li>
  </ul>
</div>
`;

exports[`Show Hide 1`] = `
<div style="display: grid; place-items: center; margin-bottom: var(--ds-size-4);">
  <button
    data-variant="primary"
    type="button"
  >
    Skjul feilmelding
  </button>
</div>
<div
  tabindex="-1"
  aria-labelledby="«r2»"
>
  <h2 id="«r2»">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</div>
`;

exports[`With Form 1`] = `
<div>
  <label
    data-weight="medium"
    for="fornavn"
  >
    Fornavn
  </label>
  <div>
    <input
      aria-invalid="true"
      id="fornavn"
      type="text"
      aria-describedby="fornavn:validation"
    >
  </div>
  <p
    data-field="validation"
    id="fornavn:validation"
  >
    Fornavn må være minst 2 tegn
  </p>
</div>
<div>
  <label
    data-weight="medium"
    for="telefon"
  >
    Telefon
  </label>
  <div>
    <input
      aria-invalid="true"
      id="telefon"
      type="tel"
      aria-describedby="telefon:validation"
    >
  </div>
  <p
    data-field="validation"
    id="telefon:validation"
  >
    Telefonnummer kan kun inneholde siffer
  </p>
</div>
<div
  tabindex="-1"
  aria-labelledby="«r1»"
>
  <h2 id="«r1»">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</div>
`;
